--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "screen-to-text",
   "version": "1.0.0",
   "description": "An electron mini app to help you copy texts from screenshots",
-  "main": "dist/main.js",
+  "main": "main.js",
   "scripts": {
-    "start": "npm run build & electron .",
+    "start": "npm-run-all --serial delete:dist build copy start:electron",
+    "start:electron": "electron dist",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "copy": "npm-run-all --parallel copy:package copy:views",
+    "copy:views": "cpx src/index.html dist",
+    "copy:package": "cpx package.json dist",
+    "delete:dist": "rimraf dist"
   },
   "author": "Zhiyue Yi",
   "license": "MIT",
   "devDependencies": {
+    "cpx": "^1.5.0",
     "jest": "^24.9.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
